--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@testing-library/user-event": "^13.5.0",
     "ethers": "^5.7.2",
     "ipfs-http-client": "^60.0.1",
+    "moralis": "^1.8.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-js-loader": "^0.1.0",
+    "react-moralis": "^1.4.0",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
