--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "faker-js": "^1.0.0",
     "ipfs-http-client": "^60.0.1",
     "moralis": "^1.8.0",
+    "moralis-v1": "^1.13.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
